@@ -1,4 +1,9 @@
 2006-08-27  Marzo Sette Torres Junior <marzojr@yahoo.com>
+	* chunks.cc, objs.o: Fixed map corruption bug when dragging chunks from ES.
+	  Also, prevent map changes when removing terrain objects if nodel is true,
+	  and correctly check for map cache out when moving terrain objects.
+
+2006-08-27  Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* Makefile.common: Fixed UCC compile problem in MinGW.
 	* content/bgkeyring/*/*: Merged in the 'Iteractions' part of Alun Bestor's
 	  Quests & Iteractions mod into the Keyring mod. Added generic healing
